create load_data_alpaca function based on original load_data function

--- a/stockdemo.ipynb
+++ b/stockdemo.ipynb
@@ -3,31 +3,146 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using TensorFlow backend.\n"
+      "136.8\n",
+      "136.7\n",
+      "136.8\n",
+      "136.79\n",
+      "136.62\n",
+      "136.72\n",
+      "136.88\n",
+      "136.76\n",
+      "136.83\n",
+      "136.91\n",
+      "136.96\n",
+      "137.03\n",
+      "137.1\n",
+      "137.1\n",
+      "137.05\n",
+      "137.03\n",
+      "137\n",
+      "136.86\n",
+      "136.89\n",
+      "136.9\n",
+      "136.91\n",
+      "136.83\n",
+      "136.97\n",
+      "136.95\n",
+      "136.89\n",
+      "136.86\n",
+      "136.87\n",
+      "136.74\n",
+      "136.75\n",
+      "136.75\n",
+      "136.74\n",
+      "136.82\n",
+      "136.88\n",
+      "136.9\n",
+      "136.9\n",
+      "136.98\n",
+      "136.92\n",
+      "136.94\n",
+      "136.95\n",
+      "136.98\n",
+      "137\n",
+      "136.99\n",
+      "137\n",
+      "137\n",
+      "137.1\n",
+      "137.09\n",
+      "137\n",
+      "136.96\n",
+      "136.96\n",
+      "136.9\n",
+      "136.96\n",
+      "136.99\n",
+      "137\n",
+      "136.99\n",
+      "137\n",
+      "136.99\n",
+      "136.96\n",
+      "136.96\n",
+      "136.96\n",
+      "136.96\n",
+      "136.96\n",
+      "136.98\n",
+      "136.99\n",
+      "136.99\n",
+      "136.9\n",
+      "136.91\n",
+      "136.87\n",
+      "136.88\n",
+      "136.8\n",
+      "136.8\n",
+      "136.8\n",
+      "136.8\n",
+      "136.75\n",
+      "136.79\n",
+      "136.79\n",
+      "136.76\n",
+      "136.79\n",
+      "136.76\n",
+      "136.8\n",
+      "136.74\n",
+      "136.84\n",
+      "136.85\n",
+      "136.9\n",
+      "136.99\n",
+      "136.95\n",
+      "136.91\n",
+      "136.95\n",
+      "136.87\n",
+      "136.94\n",
+      "136.93\n",
+      "136.83\n",
+      "136.95\n",
+      "136.94\n",
+      "136.91\n",
+      "136.88\n",
+      "136.92\n",
+      "136.9\n",
+      "136.92\n",
+      "136.89\n",
+      "136.68\n",
+      "136.52\n",
+      "136.55\n",
+      "136.64\n",
+      "136.51\n",
+      "136.51\n",
+      "136.54\n",
+      "136.48\n",
+      "136.42\n",
+      "136.4\n",
+      "136.3\n",
+      "136.23\n",
+      "136.25\n",
+      "136.26\n",
+      "136.37\n",
+      "136.36\n",
+      "136.35\n",
+      "136.3\n",
+      "136.31\n",
+      "136.28\n",
+      "136.25\n"
      ]
     }
    ],
    "source": [
     "from keras.layers.core import Dense, Activation, Dropout\n",
     "from keras.layers.recurrent import LSTM\n",
-    "from keras.models import Sequential\n",
+    "from tensorflow.keras import Sequential\n",
     "import lstm, time #helper libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Step 1 Load Data\n",
@@ -36,16 +151,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "compilation time :  0.0409510135651\n"
+     "ename": "TypeError",
+     "evalue": "__init__() missing 1 required positional argument: 'units'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-e2a8f2d36b91>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSequential\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m model.add(LSTM(\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0minput_dim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0moutput_dim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 1 required positional argument: 'units'"
      ]
     }
    ],
@@ -70,15 +187,13 @@
     "\n",
     "start = time.time()\n",
     "model.compile(loss='mse', optimizer='rmsprop')\n",
-    "print 'compilation time : ', time.time() - start"
+    "#print ('compilation time : '), time.time() - start"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -113,9 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -153,21 +266,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
